Fixes to testimonial form. Crashed Safari trying to change the publish option. Updated styles to be left aligned.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -236,9 +236,7 @@ label {
 
 .button, .button:hover {
 	border: none;
-	/*padding: 2px;
-	position: relative;
-	top: 3px;*/
+	margin-bottom: 0px;
 }
 
 .rightbutton {
